# Hoshii

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
claude/: ADR.md  ARCHITECTURE.md  BUG_FIX_GUIDE.md  CONVENTIONS.md  DEVELOPMENT_STATUS.md  GLOSSARY.md  MEDIA_DETECTION.md  MOBILE_STRATEGY.md  NATURAL_SORT_TESTS.md  PERSONA.md  PROGRESS.md  PROJECT_SETUP.md  SECURITY.md  TASK_BREAKDOWN.md  TYPES_REFERENCE.md  UI_REFERENCE.md
claude/archive/: INSTRUCTIONS.md  NATURAL_SORT_TEXT.md.md  OPERATIONAL_PHASES.md  PROGRESS.md  PROJECT_DESCRIPTION.md  TASK_BREAKDOWN.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  SECURITY.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: check_ffmpeg.rs  chrono_groups.rs  db_ops.rs  favorites.rs  file_ops.rs  gallery_ops.rs  incremental_scan.rs  media_probe.rs  metadata_io.rs  mod.rs  root_folders.rs  scan_gallery.rs  scan_roots.rs  settings.rs  smart_groups.rs  tag_ops.rs  tags.rs  thumbnails.rs  video_remux.rs  volumes.rs  zip_ops.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/db/migrations/: 002_add_schema_version.sql
src-tauri/src/models/: gallery.rs  media.rs  mod.rs  scan.rs  volume.rs
src-tauri/src/services/: chrono_linking.rs  file_watcher.rs  media_detector.rs  mod.rs  natural_sort.rs  scanner.rs  smart_grouping.rs  thumbnail.rs  video_processor.rs  volume_tracker.rs
src/app/: App.tsx  global.css  providers.tsx  routes.tsx
src/claude/: QUALITY_GATES.md  (+2 more)
(+168 files in other folders)
